[gd_scene load_steps=27 format=3 uid="uid://dxnwbn3vqjhme"]

[ext_resource type="Script" uid="uid://cnrjijulj0jqm" path="res://character.gd" id="1_wa5vi"]
[ext_resource type="Script" uid="uid://kxh4dnwdgvuy" path="res://Player/animation_controller.gd" id="9_ghyj5"]
[ext_resource type="PackedScene" uid="uid://c0hrabmf30gmc" path="res://Models/Scenes/animatedMonkeyMan.tscn" id="10_hjhm6"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_b1ygp"]
animation = &"Falling"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_o28un"]
animation = &"RightPunch"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pisgm"]
animation = &"StartFighting"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_n471f"]
animation = &"LeftPunch"

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_7emwf"]

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_apopc"]
filter_enabled = true
filters = ["Armature/Skeleton3D:mixamorig_Head", "Armature/Skeleton3D:mixamorig_HeadTop_End", "Armature/Skeleton3D:mixamorig_LeftArm", "Armature/Skeleton3D:mixamorig_LeftForeArm", "Armature/Skeleton3D:mixamorig_LeftHand", "Armature/Skeleton3D:mixamorig_LeftHandIndex1", "Armature/Skeleton3D:mixamorig_LeftHandIndex2", "Armature/Skeleton3D:mixamorig_LeftHandIndex3", "Armature/Skeleton3D:mixamorig_LeftHandIndex4", "Armature/Skeleton3D:mixamorig_LeftHandThumb1", "Armature/Skeleton3D:mixamorig_LeftHandThumb2", "Armature/Skeleton3D:mixamorig_LeftHandThumb3", "Armature/Skeleton3D:mixamorig_LeftHandThumb4", "Armature/Skeleton3D:mixamorig_LeftShoulder", "Armature/Skeleton3D:mixamorig_Neck", "Armature/Skeleton3D:mixamorig_RightArm", "Armature/Skeleton3D:mixamorig_RightForeArm", "Armature/Skeleton3D:mixamorig_RightHand", "Armature/Skeleton3D:mixamorig_RightHandIndex1", "Armature/Skeleton3D:mixamorig_RightHandIndex2", "Armature/Skeleton3D:mixamorig_RightHandIndex3", "Armature/Skeleton3D:mixamorig_RightHandIndex4", "Armature/Skeleton3D:mixamorig_RightHandThumb1", "Armature/Skeleton3D:mixamorig_RightHandThumb2", "Armature/Skeleton3D:mixamorig_RightHandThumb3", "Armature/Skeleton3D:mixamorig_RightHandThumb4", "Armature/Skeleton3D:mixamorig_RightShoulder"]

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_hshwv"]
filter_enabled = true
filters = ["Armature/Skeleton3D:mixamorig_Head", "Armature/Skeleton3D:mixamorig_HeadTop_End", "Armature/Skeleton3D:mixamorig_LeftArm", "Armature/Skeleton3D:mixamorig_LeftForeArm", "Armature/Skeleton3D:mixamorig_LeftHand", "Armature/Skeleton3D:mixamorig_LeftHandIndex1", "Armature/Skeleton3D:mixamorig_LeftHandIndex2", "Armature/Skeleton3D:mixamorig_LeftHandIndex3", "Armature/Skeleton3D:mixamorig_LeftHandIndex4", "Armature/Skeleton3D:mixamorig_LeftHandThumb1", "Armature/Skeleton3D:mixamorig_LeftHandThumb2", "Armature/Skeleton3D:mixamorig_LeftHandThumb3", "Armature/Skeleton3D:mixamorig_LeftHandThumb4", "Armature/Skeleton3D:mixamorig_LeftShoulder", "Armature/Skeleton3D:mixamorig_Neck", "Armature/Skeleton3D:mixamorig_RightArm", "Armature/Skeleton3D:mixamorig_RightForeArm", "Armature/Skeleton3D:mixamorig_RightHand", "Armature/Skeleton3D:mixamorig_RightHandIndex1", "Armature/Skeleton3D:mixamorig_RightHandIndex2", "Armature/Skeleton3D:mixamorig_RightHandIndex3", "Armature/Skeleton3D:mixamorig_RightHandIndex4", "Armature/Skeleton3D:mixamorig_RightHandThumb1", "Armature/Skeleton3D:mixamorig_RightHandThumb2", "Armature/Skeleton3D:mixamorig_RightHandThumb3", "Armature/Skeleton3D:mixamorig_RightHandThumb4", "Armature/Skeleton3D:mixamorig_RightShoulder"]

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_gpjlu"]
filter_enabled = true
filters = ["Armature/Skeleton3D:mixamorig_Head", "Armature/Skeleton3D:mixamorig_HeadTop_End", "Armature/Skeleton3D:mixamorig_LeftArm", "Armature/Skeleton3D:mixamorig_LeftForeArm", "Armature/Skeleton3D:mixamorig_LeftHand", "Armature/Skeleton3D:mixamorig_LeftHandIndex1", "Armature/Skeleton3D:mixamorig_LeftHandIndex2", "Armature/Skeleton3D:mixamorig_LeftHandIndex3", "Armature/Skeleton3D:mixamorig_LeftHandIndex4", "Armature/Skeleton3D:mixamorig_LeftHandThumb1", "Armature/Skeleton3D:mixamorig_LeftHandThumb2", "Armature/Skeleton3D:mixamorig_LeftHandThumb3", "Armature/Skeleton3D:mixamorig_LeftHandThumb4", "Armature/Skeleton3D:mixamorig_LeftShoulder", "Armature/Skeleton3D:mixamorig_Neck", "Armature/Skeleton3D:mixamorig_RightArm", "Armature/Skeleton3D:mixamorig_RightForeArm", "Armature/Skeleton3D:mixamorig_RightHand", "Armature/Skeleton3D:mixamorig_RightHandIndex1", "Armature/Skeleton3D:mixamorig_RightHandIndex2", "Armature/Skeleton3D:mixamorig_RightHandIndex3", "Armature/Skeleton3D:mixamorig_RightHandIndex4", "Armature/Skeleton3D:mixamorig_RightHandThumb1", "Armature/Skeleton3D:mixamorig_RightHandThumb2", "Armature/Skeleton3D:mixamorig_RightHandThumb3", "Armature/Skeleton3D:mixamorig_RightHandThumb4", "Armature/Skeleton3D:mixamorig_RightShoulder"]

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_5htga"]

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_gu6f8"]

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_p5o4e"]

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_apopc"]

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_b1ygp"]
filter_enabled = true
filters = ["Armature/Skeleton3D:mixamorig_Head", "Armature/Skeleton3D:mixamorig_HeadTop_End", "Armature/Skeleton3D:mixamorig_LeftArm", "Armature/Skeleton3D:mixamorig_LeftForeArm", "Armature/Skeleton3D:mixamorig_LeftHand", "Armature/Skeleton3D:mixamorig_LeftHandIndex1", "Armature/Skeleton3D:mixamorig_LeftHandIndex2", "Armature/Skeleton3D:mixamorig_LeftHandIndex3", "Armature/Skeleton3D:mixamorig_LeftHandIndex4", "Armature/Skeleton3D:mixamorig_LeftHandThumb1", "Armature/Skeleton3D:mixamorig_LeftHandThumb2", "Armature/Skeleton3D:mixamorig_LeftHandThumb3", "Armature/Skeleton3D:mixamorig_LeftHandThumb4", "Armature/Skeleton3D:mixamorig_LeftShoulder", "Armature/Skeleton3D:mixamorig_Neck", "Armature/Skeleton3D:mixamorig_RightArm", "Armature/Skeleton3D:mixamorig_RightForeArm", "Armature/Skeleton3D:mixamorig_RightHand", "Armature/Skeleton3D:mixamorig_RightHandIndex1", "Armature/Skeleton3D:mixamorig_RightHandIndex2", "Armature/Skeleton3D:mixamorig_RightHandIndex3", "Armature/Skeleton3D:mixamorig_RightHandIndex4", "Armature/Skeleton3D:mixamorig_RightHandThumb1", "Armature/Skeleton3D:mixamorig_RightHandThumb2", "Armature/Skeleton3D:mixamorig_RightHandThumb3", "Armature/Skeleton3D:mixamorig_RightHandThumb4", "Armature/Skeleton3D:mixamorig_RightShoulder"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_apopc"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5htga"]
animation = &"Walking"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_p5o4e"]
animation = &"Running"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gu6f8"]
animation = &"Running"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dkpta"]
animation = &"Running"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lfmf2"]
animation = &"Running"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_pisgm"]
blend_point_0/node = SubResource("AnimationNodeAnimation_apopc")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("AnimationNodeAnimation_5htga")
blend_point_1/pos = 1.0
blend_point_2/node = SubResource("AnimationNodeAnimation_p5o4e")
blend_point_2/pos = 2.0
blend_point_3/node = SubResource("AnimationNodeAnimation_gu6f8")
blend_point_3/pos = 3.0
blend_point_4/node = SubResource("AnimationNodeAnimation_dkpta")
blend_point_4/pos = 3.0
blend_point_5/node = SubResource("AnimationNodeAnimation_lfmf2")
blend_point_5/pos = 3.0
min_space = 0.0
max_space = 3.0
snap = 1.0

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_o28un"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_gu6f8"]
nodes/Animation/node = SubResource("AnimationNodeAnimation_n471f")
nodes/Animation/position = Vector2(340, 600)
"nodes/Animation 2/node" = SubResource("AnimationNodeAnimation_b1ygp")
"nodes/Animation 2/position" = Vector2(1540, 0)
"nodes/Animation 3/node" = SubResource("AnimationNodeAnimation_o28un")
"nodes/Animation 3/position" = Vector2(780, 680)
"nodes/Animation 4/node" = SubResource("AnimationNodeAnimation_pisgm")
"nodes/Animation 4/position" = Vector2(100, 460)
nodes/Jump/node = SubResource("AnimationNodeOneShot_7emwf")
nodes/Jump/position = Vector2(1660, 360)
nodes/PunchLeft/node = SubResource("AnimationNodeOneShot_apopc")
nodes/PunchLeft/position = Vector2(760, 80)
nodes/PunchLeftOld/node = SubResource("AnimationNodeOneShot_hshwv")
nodes/PunchLeftOld/position = Vector2(1500, 620)
nodes/PunchRight/node = SubResource("AnimationNodeOneShot_gpjlu")
nodes/PunchRight/position = Vector2(1300, 240)
nodes/TimeScale/node = SubResource("AnimationNodeTimeScale_p5o4e")
nodes/TimeScale/position = Vector2(1340, 660)
"nodes/TimeScale 2/node" = SubResource("AnimationNodeTimeScale_5htga")
"nodes/TimeScale 2/position" = Vector2(1060, 620)
"nodes/TimeScale 3/node" = SubResource("AnimationNodeTimeScale_gu6f8")
"nodes/TimeScale 3/position" = Vector2(560, 400)
nodes/TimeScale1/node = SubResource("AnimationNodeTimeScale_apopc")
nodes/TimeScale1/position = Vector2(-40, 200)
nodes/aiming_blend/node = SubResource("AnimationNodeBlend2_b1ygp")
nodes/aiming_blend/position = Vector2(320, 320)
nodes/blend_movement/node = SubResource("AnimationNodeBlendSpace1D_pisgm")
nodes/blend_movement/position = Vector2(-300, 220)
nodes/on_floor_blend/node = SubResource("AnimationNodeBlend2_o28un")
nodes/on_floor_blend/position = Vector2(1820, 20)
nodes/output/position = Vector2(2260, -20)
node_connections = [&"PunchLeft", 0, &"aiming_blend", &"PunchLeft", 1, &"TimeScale 3", &"PunchLeftOld", 1, &"TimeScale", &"PunchRight", 0, &"PunchLeft", &"PunchRight", 1, &"TimeScale 2", &"TimeScale 2", 0, &"Animation 3", &"TimeScale 3", 0, &"Animation", &"TimeScale1", 0, &"blend_movement", &"aiming_blend", 0, &"TimeScale1", &"aiming_blend", 1, &"Animation 4", &"on_floor_blend", 0, &"Animation 2", &"on_floor_blend", 1, &"PunchRight", &"output", 0, &"on_floor_blend"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_l5upd"]
radius = 0.2
height = 1.2

[node name="Character" type="CharacterBody3D"]
script = ExtResource("1_wa5vi")
animation = null

[node name="AnimationController" type="Node" parent="." node_paths=PackedStringArray("animation_tree", "player")]
script = ExtResource("9_ghyj5")
animation_tree = NodePath("../MeshRoot/AnimationTree")
player = NodePath("..")

[node name="MeshRoot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.38419e-07, 0)

[node name="AnimationTree" type="AnimationTree" parent="MeshRoot"]
root_node = NodePath("../animated_monkey_man_trimmed")
tree_root = SubResource("AnimationNodeBlendTree_gu6f8")
anim_player = NodePath("../animated_monkey_man_trimmed/AnimationPlayer")
parameters/Jump/active = false
parameters/Jump/internal_active = false
parameters/Jump/request = 0
parameters/PunchLeft/active = false
parameters/PunchLeft/internal_active = false
parameters/PunchLeft/request = 0
parameters/PunchLeftOld/active = false
parameters/PunchLeftOld/internal_active = 1.06667
parameters/PunchLeftOld/request = 0
parameters/PunchRight/active = false
parameters/PunchRight/internal_active = false
parameters/PunchRight/request = 0
parameters/TimeScale/scale = 0.0
"parameters/TimeScale 2/scale" = 2.0
"parameters/TimeScale 3/scale" = 2.0
parameters/TimeScale1/scale = 1.0
parameters/aiming_blend/blend_amount = 0.0
parameters/blend_movement/blend_position = 0.1
parameters/on_floor_blend/blend_amount = 1.0

[node name="animated_monkey_man_trimmed" parent="MeshRoot" instance=ExtResource("10_hjhm6")]

[node name="Skeleton3D" parent="MeshRoot/animated_monkey_man_trimmed/Armature" index="0"]
bones/0/position = Vector3(-6.74672, 3.16652, -62.3543)
bones/0/rotation = Quaternion(-0.717503, 0.0187063, 0.0082313, 0.696256)
bones/1/position = Vector3(3.92087e-08, 6.99434, -0.580394)
bones/1/rotation = Quaternion(-0.0318936, -0.00192046, 0.00442366, 0.99948)
bones/2/position = Vector3(8.028e-08, 8.1881, 1.02501e-06)
bones/2/rotation = Quaternion(0.0108877, -0.0239958, 0.0075996, 0.999624)
bones/3/position = Vector3(-2.20258e-08, 9.35785, -6.19289e-07)
bones/3/rotation = Quaternion(0.0102539, -0.0237653, 0.00801403, 0.999633)
bones/4/position = Vector3(1.3141e-07, 10.5276, -6.92809e-07)
bones/4/rotation = Quaternion(0.0226947, 0.0128538, -0.0224618, 0.999407)
bones/5/position = Vector3(-3.35276e-08, 5.07295, 0.219623)
bones/5/rotation = Quaternion(0.0374229, -0.0199098, 0.0176394, 0.998945)
bones/6/position = Vector3(-5.69969e-08, 16.3962, 0.709842)
bones/7/position = Vector3(4.06175, 9.39171, -0.103784)
bones/7/rotation = Quaternion(-0.538292, -0.431727, 0.622916, -0.36855)
bones/8/position = Vector3(5.12946e-07, 8.45856, 5.54249e-06)
bones/8/rotation = Quaternion(0.474709, 0.165388, 0.107707, 0.857728)
bones/9/position = Vector3(-3.58994e-07, 20.6769, -2.27767e-05)
bones/9/rotation = Quaternion(-0.0205205, 0.00997308, 0.226515, 0.97374)
bones/10/position = Vector3(2.02804e-08, 17.9719, -5.74929e-06)
bones/10/rotation = Quaternion(0.123446, 0.108956, -0.0432557, 0.985403)
bones/11/position = Vector3(-2.41666, 3.34332, 1.76206e-06)
bones/11/rotation = Quaternion(-0.0331353, -0.130123, 0.144812, 0.980306)
bones/12/position = Vector3(-0.597371, 3.24571, 8.88436e-07)
bones/12/rotation = Quaternion(0.0479518, 0.0245587, -0.146495, 0.987743)
bones/13/position = Vector3(0.010611, 2.24793, 2.36875e-06)
bones/13/rotation = Quaternion(0.0688446, 0.00812057, -0.0304153, 0.997131)
bones/14/position = Vector3(0.586757, 1.60805, -5.57206e-06)
bones/15/position = Vector3(-5.33033e-07, 5.96599, -7.84715e-07)
bones/15/rotation = Quaternion(0.206394, -0.0208554, -0.11664, 0.971268)
bones/16/position = Vector3(-0.0401235, 3.81909, 8.21827e-06)
bones/16/rotation = Quaternion(0.459044, 0.00318606, -0.0309258, 0.887869)
bones/17/position = Vector3(0.0344787, 1.87737, -9.58878e-06)
bones/17/rotation = Quaternion(-0.0292792, -0.00207124, -0.0135485, 0.999477)
bones/18/position = Vector3(0.00564547, 2.05718, 3.30753e-06)
bones/19/position = Vector3(-4.06175, 9.39014, -0.0848554)
bones/19/rotation = Quaternion(0.573123, -0.433623, 0.538527, 0.439876)
bones/20/position = Vector3(-3.80368e-07, 8.45856, 1.12048e-06)
bones/20/rotation = Quaternion(0.498857, -0.116165, -0.130504, 0.848891)
bones/21/position = Vector3(-4.83168e-07, 20.6769, 6.97872e-07)
bones/21/rotation = Quaternion(-0.0219381, -0.00941882, -0.216021, 0.976097)
bones/22/position = Vector3(-6.72013e-07, 17.9718, -3.17508e-06)
bones/22/rotation = Quaternion(0.0206128, -0.0793409, 0.1063, 0.990949)
bones/23/position = Vector3(2.97907, 3.21409, 2.37785e-06)
bones/23/rotation = Quaternion(-0.00608846, 0.0189039, -0.0905378, 0.995695)
bones/24/position = Vector3(0.615682, 3.45143, -8.7615e-06)
bones/24/rotation = Quaternion(0.0840747, -0.0512121, 0.0271488, 0.994772)
bones/25/position = Vector3(-0.102859, 2.07161, 1.09898e-05)
bones/25/rotation = Quaternion(-0.00653458, -0.0146533, 0.000808133, 0.999871)
bones/26/position = Vector3(-0.512836, 1.28946, -4.23526e-06)
bones/27/position = Vector3(-1.88854e-07, 6.19373, 4.04219e-06)
bones/27/rotation = Quaternion(0.165039, 0.00240197, 0.092092, 0.981975)
bones/28/position = Vector3(0.0101762, 3.44529, -1.44274e-05)
bones/28/rotation = Quaternion(0.429021, -0.00227267, 0.0345602, 0.90263)
bones/29/position = Vector3(-0.0163659, 2.01669, 1.80628e-05)
bones/29/rotation = Quaternion(-0.0528087, 0.000973074, 0.00908273, 0.998563)
bones/30/position = Vector3(0.00619192, 2.10688, -8.07888e-06)
bones/31/position = Vector3(5.81758, -3.89321, -1.2225)
bones/31/rotation = Quaternion(0.0487068, 0.0951783, 0.991525, -0.0737976)
bones/32/position = Vector3(-1.3313e-06, 29.682, -2.74319e-07)
bones/32/rotation = Quaternion(-0.213136, -0.0826349, 0.0261392, 0.973171)
bones/33/position = Vector3(8.00859e-07, 26.5345, -1.03814e-07)
bones/33/rotation = Quaternion(0.604227, -0.0150856, -0.0788695, 0.792756)
bones/34/position = Vector3(9.89453e-07, 9.35281, -5.32109e-06)
bones/34/rotation = Quaternion(0.226069, -0.06115, 0.0138866, 0.972091)
bones/35/position = Vector3(6.09085e-07, 3.82392, 1.96695e-07)
bones/36/position = Vector3(-5.81758, -3.8932, -1.21036)
bones/36/rotation = Quaternion(-0.0811573, 0.0863624, 0.992135, 0.040295)
bones/37/position = Vector3(8.65777e-07, 29.6777, 1.58873e-07)
bones/37/rotation = Quaternion(-0.277877, 0.0517127, -0.00270596, 0.95922)
bones/38/position = Vector3(-1.05811e-06, 26.5331, 1.509e-06)
bones/38/rotation = Quaternion(0.634348, 0.0503356, -0.0276404, 0.770912)
bones/39/position = Vector3(-6.03051e-07, 9.32334, 3.14765e-06)
bones/39/rotation = Quaternion(0.26389, 0.0642106, -0.0108592, 0.962352)
bones/40/position = Vector3(5.39422e-07, 3.81652, 5.82263e-07)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)
shape = SubResource("CapsuleShape3D_l5upd")

[node name="FootstepSound" type="AudioStreamPlayer" parent="."]
bus = &"Footsteps"

[editable path="MeshRoot/animated_monkey_man_trimmed"]
